--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   h1 {
       font-size: 4rem;
       letter-spacing: 0.2em;
-      text-shadow: 0 0 10px #ff0000, 0 0 30px #ff0000, 0 0 50px #ff0000;
+      text-shadow: 0 0 10px #3399ff, 0 0 30px #3399ff, 0 0 50px #3399ff;
   }
 
   .glitch-effect {
